{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 255,
  "lineage": "bf91272c-d504-5c98-ce46-2ced1888bf74",
  "resources": [
    {
      "module": "module.ci-cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "fb_cluster_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b09f36be67d32fff",
            "arn": "arn:aws:ec2:us-east-2:941206295814:instance/i-08ac53ed9d7ac2ac1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0041b5d58bde3da13",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "fb_cluster_node_profile",
            "id": "i-08ac53ed9d7ac2ac1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.large",
            "ipv6_address_count": 0,
            "key_name": "gitlab-featurebase-ci",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0b00c3636cad95ae5",
            "private_dns": "ip-10-0-1-152.us-east-2.compute.internal",
            "private_ip": "10.0.1.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f12ff15c510db547",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dcb2339122bafc95",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV-featurebase-cluster-0",
              "Prefix": "smoke-X8A0attf2zz6EhnV",
              "Role": "cluster_node"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV-featurebase-cluster-0",
              "Prefix": "smoke-X8A0attf2zz6EhnV",
              "Role": "cluster_node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0580fa9cbc0493d77"
            ]
          },
          "dependencies": [
            "module.ci-cluster.aws_iam_instance_profile.fb_cluster_node_profile",
            "module.ci-cluster.aws_iam_role.fb_cluster_node_role",
            "module.ci-cluster.aws_key_pair.gitlab-featurebase-ci",
            "module.ci-cluster.aws_security_group.featurebase",
            "module.ci-cluster.data.aws_ami.amazon_linux_2",
            "module.ci-cluster.module.vpc.aws_subnet.private",
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ci-cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "fb_ingest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b09f36be67d32fff",
            "arn": "arn:aws:ec2:us-east-2:941206295814:instance/i-07f30af63526e9a6b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a7270e5a68789fbb",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "fb_cluster_node_profile",
            "id": "i-07f30af63526e9a6b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c6g.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "gitlab-featurebase-ci",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0c855451ce29250c9",
            "private_dns": "ip-10-0-101-214.us-east-2.compute.internal",
            "private_ip": "10.0.101.214",
            "public_ip": "3.128.203.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-021c14b5593bdd999",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f6ef1380254341b",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV-featurebase-ingest-0",
              "Prefix": "smoke-X8A0attf2zz6EhnV",
              "Role": "ingest_node"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV-featurebase-ingest-0",
              "Prefix": "smoke-X8A0attf2zz6EhnV",
              "Role": "ingest_node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08089f99e02a87452"
            ]
          },
          "dependencies": [
            "module.ci-cluster.aws_iam_instance_profile.fb_cluster_node_profile",
            "module.ci-cluster.aws_iam_role.fb_cluster_node_role",
            "module.ci-cluster.aws_key_pair.gitlab-featurebase-ci",
            "module.ci-cluster.aws_security_group.ingest",
            "module.ci-cluster.data.aws_ami.amazon_linux_2",
            "module.ci-cluster.module.vpc.aws_subnet.public",
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ci-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "featurebase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:941206295814:security-group/sg-0580fa9cbc0493d77",
            "description": "Allow featurebase inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0580fa9cbc0493d77",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "GRPC from Internal",
                "from_port": 20101,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20101
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL from Internal",
                "from_port": 55432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 55432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from Internal",
                "from_port": 10101,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10101
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "etcd from internal 2",
                "from_port": 10401,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10401
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "etcd from internal",
                "from_port": 10301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10301
              }
            ],
            "name": "allow_featurebase",
            "name_prefix": "",
            "owner_id": "941206295814",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_featurebase"
            },
            "tags_all": {
              "Name": "allow_featurebase"
            },
            "timeouts": null,
            "vpc_id": "vpc-035fcf75548026b23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ci-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:941206295814:security-group/sg-08089f99e02a87452",
            "description": "Allow ingest inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08089f99e02a87452",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10101,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10101
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ingest",
            "name_prefix": "",
            "owner_id": "941206295814",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ingest"
            },
            "tags_all": {
              "Name": "allow_ingest"
            },
            "timeouts": null,
            "vpc_id": "vpc-035fcf75548026b23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ci-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099cedbe3c5820bbe",
            "domain": "vpc",
            "id": "eipalloc-099cedbe3c5820bbe",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-17-85-138.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.85.138",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fca65223cdfd313a",
            "domain": "vpc",
            "id": "eipalloc-0fca65223cdfd313a",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-135-112-2.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.112.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09323e2a47e394df7",
            "domain": "vpc",
            "id": "eipalloc-09323e2a47e394df7",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-128-36-233.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.36.233",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ci-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:941206295814:internet-gateway/igw-069e52ef204598fdd",
            "id": "igw-069e52ef204598fdd",
            "owner_id": "941206295814",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "vpc_id": "vpc-035fcf75548026b23"
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ci-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099cedbe3c5820bbe",
            "connectivity_type": "public",
            "id": "nat-01960cd93ff94dc13",
            "network_interface_id": "eni-0da9e0562c5e62a35",
            "private_ip": "10.0.101.138",
            "public_ip": "3.17.85.138",
            "subnet_id": "subnet-09f6ef1380254341b",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            }
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_eip.nat",
            "module.ci-cluster.module.vpc.aws_internet_gateway.this",
            "module.ci-cluster.module.vpc.aws_subnet.public",
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fca65223cdfd313a",
            "connectivity_type": "public",
            "id": "nat-03883494dfdfcc234",
            "network_interface_id": "eni-0f234f97b35663c64",
            "private_ip": "10.0.102.238",
            "public_ip": "3.135.112.2",
            "subnet_id": "subnet-063459780d5b84c86",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            }
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_eip.nat",
            "module.ci-cluster.module.vpc.aws_internet_gateway.this",
            "module.ci-cluster.module.vpc.aws_subnet.public",
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09323e2a47e394df7",
            "connectivity_type": "public",
            "id": "nat-05bbd0bcd20938896",
            "network_interface_id": "eni-0a36a85d8383cac8e",
            "private_ip": "10.0.103.228",
            "public_ip": "3.128.36.233",
            "subnet_id": "subnet-0eae785053155c08b",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            }
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_eip.nat",
            "module.ci-cluster.module.vpc.aws_internet_gateway.this",
            "module.ci-cluster.module.vpc.aws_subnet.public",
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ci-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06122e232dba3e71d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01960cd93ff94dc13",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06122e232dba3e71d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_eip.nat",
            "module.ci-cluster.module.vpc.aws_internet_gateway.this",
            "module.ci-cluster.module.vpc.aws_nat_gateway.this",
            "module.ci-cluster.module.vpc.aws_route_table.private",
            "module.ci-cluster.module.vpc.aws_subnet.public",
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0757c96161330927f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03883494dfdfcc234",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0757c96161330927f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_eip.nat",
            "module.ci-cluster.module.vpc.aws_internet_gateway.this",
            "module.ci-cluster.module.vpc.aws_nat_gateway.this",
            "module.ci-cluster.module.vpc.aws_route_table.private",
            "module.ci-cluster.module.vpc.aws_subnet.public",
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0584788728d6485171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05bbd0bcd20938896",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0584788728d648517",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_eip.nat",
            "module.ci-cluster.module.vpc.aws_internet_gateway.this",
            "module.ci-cluster.module.vpc.aws_nat_gateway.this",
            "module.ci-cluster.module.vpc.aws_route_table.private",
            "module.ci-cluster.module.vpc.aws_subnet.public",
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ci-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-069e52ef204598fdd",
            "id": "r-rtb-08768a10ff241df961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08768a10ff241df96",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_internet_gateway.this",
            "module.ci-cluster.module.vpc.aws_route_table.public",
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ci-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:941206295814:route-table/rtb-06122e232dba3e71d",
            "id": "rtb-06122e232dba3e71d",
            "owner_id": "941206295814",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "timeouts": null,
            "vpc_id": "vpc-035fcf75548026b23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:941206295814:route-table/rtb-0757c96161330927f",
            "id": "rtb-0757c96161330927f",
            "owner_id": "941206295814",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "timeouts": null,
            "vpc_id": "vpc-035fcf75548026b23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:941206295814:route-table/rtb-0584788728d648517",
            "id": "rtb-0584788728d648517",
            "owner_id": "941206295814",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "timeouts": null,
            "vpc_id": "vpc-035fcf75548026b23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ci-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:941206295814:route-table/rtb-08768a10ff241df96",
            "id": "rtb-08768a10ff241df96",
            "owner_id": "941206295814",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "timeouts": null,
            "vpc_id": "vpc-035fcf75548026b23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ci-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e02368a84fbc483d",
            "route_table_id": "rtb-06122e232dba3e71d",
            "subnet_id": "subnet-0dcb2339122bafc95"
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_route_table.private",
            "module.ci-cluster.module.vpc.aws_subnet.private",
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a94dc33d8ce77ee",
            "route_table_id": "rtb-0757c96161330927f",
            "subnet_id": "subnet-0981f7f434ca09e8e"
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_route_table.private",
            "module.ci-cluster.module.vpc.aws_subnet.private",
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc6944b6e56191de",
            "route_table_id": "rtb-0584788728d648517",
            "subnet_id": "subnet-0353db6d8c1c7ad43"
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_route_table.private",
            "module.ci-cluster.module.vpc.aws_subnet.private",
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ci-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dfd5b74f16f8cd8",
            "route_table_id": "rtb-08768a10ff241df96",
            "subnet_id": "subnet-09f6ef1380254341b"
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_route_table.public",
            "module.ci-cluster.module.vpc.aws_subnet.public",
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0628c1dc5f82384f6",
            "route_table_id": "rtb-08768a10ff241df96",
            "subnet_id": "subnet-063459780d5b84c86"
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_route_table.public",
            "module.ci-cluster.module.vpc.aws_subnet.public",
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b730b5a81f9e2de4",
            "route_table_id": "rtb-08768a10ff241df96",
            "subnet_id": "subnet-0eae785053155c08b"
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_route_table.public",
            "module.ci-cluster.module.vpc.aws_subnet.public",
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ci-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:941206295814:subnet/subnet-0dcb2339122bafc95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0dcb2339122bafc95",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941206295814",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "vpc_id": "vpc-035fcf75548026b23"
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:941206295814:subnet/subnet-0981f7f434ca09e8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0981f7f434ca09e8e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941206295814",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "vpc_id": "vpc-035fcf75548026b23"
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:941206295814:subnet/subnet-0353db6d8c1c7ad43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0353db6d8c1c7ad43",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941206295814",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "vpc_id": "vpc-035fcf75548026b23"
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ci-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:941206295814:subnet/subnet-09f6ef1380254341b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-09f6ef1380254341b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941206295814",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "vpc_id": "vpc-035fcf75548026b23"
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:941206295814:subnet/subnet-063459780d5b84c86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-063459780d5b84c86",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941206295814",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "vpc_id": "vpc-035fcf75548026b23"
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:941206295814:subnet/subnet-0eae785053155c08b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0eae785053155c08b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941206295814",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "vpc_id": "vpc-035fcf75548026b23"
          },
          "dependencies": [
            "module.ci-cluster.module.vpc.aws_vpc.this",
            "module.ci-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ci-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:941206295814:vpc/vpc-035fcf75548026b23",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db479d99cf0759f8",
            "default_route_table_id": "rtb-0a264d3195bef2a21",
            "default_security_group_id": "sg-025b70c95323fd7e6",
            "dhcp_options_id": "dopt-0398725faf4f782c8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-035fcf75548026b23",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a264d3195bef2a21",
            "owner_id": "941206295814",
            "tags": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            },
            "tags_all": {
              "Name": "smoke-X8A0attf2zz6EhnV"
            }
          }
        }
      ]
    }
  ]
}